test function added for debug mode

--- a/netefi.vcxproj
+++ b/netefi.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="mcadincl.h" />
     <ClInclude Include="netefi.h" />
     <ClInclude Include="Stdafx.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
