--- a/netefi.vcxproj.filters
+++ b/netefi.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClInclude Include="mcadincl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="netefi.cpp">
