echo functions added

--- a/tests/cpptest/cpptest.vcxproj.filters
+++ b/tests/cpptest/cpptest.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cppecho.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
