--- a/tests/cpptest/cpptest.vcxproj
+++ b/tests/cpptest/cpptest.vcxproj
@@ -76,6 +76,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cppecho.h" />
     <ClInclude Include="cpptest.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
