--- a/tests/cpptest/cpptest.vcxproj
+++ b/tests/cpptest/cpptest.vcxproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cppecho.h" />
+    <ClInclude Include="cpperror.h" />
     <ClInclude Include="cpptest.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
