--- a/tests/cstest/cstest.csproj
+++ b/tests/cstest/cstest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="cstest2.cs" />
     <Compile Include="cstest3.cs" />
     <Compile Include="csecho.cs" />
+    <Compile Include="errors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
