--- a/tests/cpptest/cpptest.vcxproj.filters
+++ b/tests/cpptest/cpptest.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="cpperror.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cppsum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
