Updated to VS2019.

--- a/tests/cstest/cstest.csproj
+++ b/tests/cstest/cstest.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cstest</RootNamespace>
     <AssemblyName>cstest</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -32,6 +32,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -87,7 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\netefi.vcxproj">
-      <Project>{AB4222D4-C0D5-4623-AB87-63FAE652309D}</Project>
+      <Project>{0f49f594-907b-49ec-bc07-a9abeb2eb2e2}</Project>
       <Name>netefi</Name>
     </ProjectReference>
   </ItemGroup>
