--- a/tests/cpptest/cpptest.vcxproj
+++ b/tests/cpptest/cpptest.vcxproj
@@ -93,7 +93,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\netefi.vcxproj">
+    <ProjectReference Include="..\..\netefi\netefi.vcxproj">
       <Project>{0f49f594-907b-49ec-bc07-a9abeb2eb2e2}</Project>
     </ProjectReference>
   </ItemGroup>
