Added support utf8 strings as a result. Test functions added: csrfile() and vbrfile(). Refactored.

--- a/tests/cstest/cstest.csproj
+++ b/tests/cstest/cstest.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="csdec.cs" />
+    <Compile Include="csrfile.cs" />
     <Compile Include="csenc.cs" />
     <Compile Include="csmix.cs" />
     <Compile Include="cserror.cs" />
