--- a/tests/cpptest/cpptest.vcxproj
+++ b/tests/cpptest/cpptest.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cppecho.h" />
