update to version 0.5

--- a/NetEFI.Abstractions/NetEFI.Abstractions.csproj
+++ b/NetEFI.Abstractions/NetEFI.Abstractions.csproj
@@ -23,4 +23,8 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
